# icicle-insights

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.runtime  README.md  claude-review.md  claude-reviews-codex-review.md  codex-review-priorities.md  codex-review.md  codex-reviews-claude-review.md  conanfile.py  conanfile.txt  example-env.txt  init.cpp  justfile  schema.sql  test-apis.http
.github/workflows/: build.yaml
conan-overlays/libpq/: conanfile.py
data/: component_names.json  component_names.txt  components.json  populate.http
docs/: README.md  architecture.md  async-task-patterns.md  background-tasks.md  database-connection-pool.md  database-reconnect.md  http-client-guide.md  logging.md  task-persistence.md  tls-guide.md
docs/dev-guide/: build-system.md  meson-guide.md  meson-quickref.md
include/core/: config.hpp  http.hpp  result.hpp  timestamp.hpp
include/db/: db.hpp
include/git/: models.hpp  router.hpp  tasks.hpp
include/insights/containers/: models.hpp
include/insights/core/: config.hpp  http.hpp  logging.hpp  routes.hpp  scheduler.hpp  timestamp.hpp  traits.hpp
include/insights/db/: db.hpp
include/insights/ghcr/: models.hpp
include/insights/git/: models.hpp  responses.hpp  router.hpp  tasks.hpp
include/insights/github/: models.hpp  responses.hpp  routes.hpp  tasks.hpp
include/insights/server/: dependencies.hpp  routes.hpp  server.hpp
include/insights/server/middleware/: logging.hpp  response.hpp
include/server/: middleware.hpp  routes.hpp  server.hpp
src/: insights.cpp  main.cpp
src/core/: routes.cpp
src/git/: accounts.cpp  platforms.cpp  repos.cpp  router.cpp  tasks.cpp
src/github/: routes.cpp  tasks.cpp
src/server/: routes.cpp  server.cpp
tests/kulala/: health.http  http-client.env.json
tests/kulala/git/: accounts.http  platforms.http  repos.http
tests/kulala/github/: accounts.http  repos.http
